--- a/src/main/resources/static/css/login/login.css
+++ b/src/main/resources/static/css/login/login.css
@@ -22,8 +22,8 @@ body:before{
     left: 50%;
     transform: translate(-50%,-50%);
     width: 34%;
-    height: 74%;
-    padding: 3% 5% 0% 5%;
+    /*height: 74%;*/
+    padding: 3% 5% 5% 5%;
     background: rgba(0,0,0,.5);
 }
 .avatar{
