--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -5,6 +5,7 @@ body {
 iframe {
     width: 100%;
     border: 0;
+    height: inherit;
 }
 
 .comm-icon {
@@ -39,6 +40,8 @@ iframe {
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding: 1rem;
+    height: 100vh;
+    background-color: #00000000;
 }
 .dropdown-menu{
     position: absolute;
