--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -4,6 +4,32 @@
     padding-left: 1.5rem;
 }
 
-.no-warp{
-    flex-direction: row;
+.tab-ul-li{
+    display: flex;
+    list-style: none;
+    padding-left: 0.5rem;
+    padding-right: 0rem;
+    margin-bottom: 0;
+    margin-right: .1rem;
+    border: 1px #000000;
+    border-style: solid solid none none;
+    border-radius: .8rem .2rem 0 0;
+}
+
+.tab-ul{
+    display: flex;
+    margin-top: 1rem;
+    margin-bottom: 0;
+    padding-left: .5rem;
+    border-bottom-width: 1px !important;
+    border-bottom-style: solid !important;
+}
+
+.tab-ul a{
+    color: #000000;
+    text-decoration: none;
+    background-color: transparent;
+    white-space: nowrap;
+    text-overflow-ellipsis: yes;
+    text-overflow: ellipsis;
 }
