--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -16,8 +16,9 @@ iframe {
 
 .sm-icon {
     display: block;
-    height: auto;
+    height: 1rem;
     width: 1rem;
+    margin-left: .3rem;
 }
 
 .help-icon {
@@ -41,9 +42,6 @@ iframe {
 }
 
 .iframe-div {
-    border-top-width: 1px !important;
-    border-top-style: solid !important;
-    margin-top: 1rem;
     margin-bottom: 1rem;
     padding: 1rem;
     height: 100vh;
