--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -45,7 +45,7 @@ iframe {
     margin-bottom: 1rem;
     padding: 1rem;
     height: 100vh;
-    background-color: #00000000;
+    background-color: rgba(0,0,0,0);
 }
 .dropdown-menu{
     position: absolute;
