--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -7,7 +7,7 @@
 .tab-ul{
     height: 1.8rem;
     display: flex;
-    margin-top: 1rem;
+    margin-top: .5rem;
     margin-bottom: 0;
     padding-left: .5rem;
     border-bottom-width: 1px !important;
