--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -12,6 +12,12 @@ iframe {
     display: block;
 }
 
+.busi-index {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
 .comm-icon {
     display: block;
     height: auto;
