--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #435653 !important;
+    background-color: #556a66 !important;
 }
 
 iframe {
@@ -43,7 +43,7 @@ iframe {
     line-height: 0;
     /* color: #495057; */
     outline: 0;
-    background-color: #435653;
+    background-color: #556a66;
     background-clip: padding-box;
     border: 1px solid #000000;
     border-radius: .25rem;
