--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -65,6 +65,7 @@ iframe {
     left: 4.16%;
     right: 4.16%;
     top: 0;
+    padding-top: .5rem;
     z-index: 999;
     background-color: #556a66;
 }
