--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -1,9 +1,3 @@
-.welcome-tips{
-    font-size: xx-small;
-    color: #ad5b07;
-    padding-left: 1.5rem;
-}
-
 .tab-ul{
     height: 1.8rem;
     display: flex;
@@ -46,4 +40,11 @@
 
 .logout-tip{
     margin-top: 1rem;
+}
+
+.welcome-tips{
+    font-size: xx-small;
+    color: #ad5b07;
+    padding-left: 1.5rem;
+    margin-bottom: 1rem;
 }
