--- a/src/main/resources/static/css/login/framelogin.css
+++ b/src/main/resources/static/css/login/framelogin.css
@@ -3,16 +3,26 @@ body{
     padding: 0;
 }
 
+body:before{
+    content:'';
+    position:fixed;
+    top:0;
+    width:100vw;
+    height:100vh;
+    background: rgba(0,0,0,.5);
+    z-index: 1000;
+}
+
 .top-padd{
     padding-top: 0.1px;
 }
 
 .contact-form{
-    margin-top: 15%;
+    margin-top: 5%;
     margin-left: 35%;
     width: 30%;
     padding: 3% 5% 1% 5%;
-    background: rgba(0,0,0,.5);
+    background: rgba(0,0,0,0);
 }
 .avatar{
     position: absolute;
