--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -103,6 +103,6 @@ iframe {
     top:0;
     width:100vw;
     height:100vh;
-    background-color: #556a66;
+    background-color: rgba(0,0,0,.2);
     z-index: 199;
 }
