--- a/src/main/resources/static/css/index/index.css
+++ b/src/main/resources/static/css/index/index.css
@@ -33,9 +33,12 @@
 }
 
 .li-choose{
-    border: 2px #8053a9;
+    /*border: 2px #8053a9;*/
+    /*border-style: solid solid none none;*/
+    /*background-color: #594f73;*/
+    border: 2px #787a80;
     border-style: solid solid none none;
-    background-color: #594f73;
+    background-color: #4b6170;
 }
 
 .logout-tip{
