--- a/src/main/resources/static/css/frameworktools/frameworktools.css
+++ b/src/main/resources/static/css/frameworktools/frameworktools.css
@@ -77,7 +77,7 @@
     top:0;
     width:100vw;
     height:100vh;
-    background-color: rgba(0,0,0,0);
+    background-color: rgba(0,0,0,.2);
     z-index: 199;
     display: none;
 }
@@ -87,7 +87,7 @@
     height: 3rem;
 }
 
-.msg-err{
+.msg-div{
     position: fixed;
     top: 30%;
     margin: auto;
@@ -95,10 +95,9 @@
     right: 0;
     width: 40%;
     display: none;
-    min-height: 30%;
-    background-color: #4b6170;
-    padding: .5rem;
+    padding: 1rem;
     z-index: 999;
+    border-radius: 1rem;
 }
 
 .icon-div{
@@ -107,18 +106,14 @@
 }
 
 .msg-content{
-    position: absolute;
-    left: 15%;
-    top: 10%;
-    width: 85%;
+    width: 100%;
     text-align: center;
 }
 
 .msg-bottom{
-    position: absolute;
+    margin-top: 1rem;
     text-align: center;
     width: 100%;
-    bottom: .5rem;
     left: 0;
 }
 
