--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -14,7 +14,7 @@ iframe {
     right: 4.16%;
     top: 0;
     height: 7rem;
-    padding-top: .5rem;
+    padding-top: 1rem;
     z-index: 99;
     background-color: #556a66;
 }
