--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -26,8 +26,8 @@ iframe {
     background-color: rgba(0,0,0,0);
 }
 
-.show{
-    display: block;
+.css-hide{
+    display: none;
 }
 
 .busi-index {
