--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -42,6 +42,7 @@ iframe {
     display: block;
     height: auto;
     width: 1.8rem;
+    cursor: pointer;
 }
 
 .sm-icon {
@@ -70,13 +71,36 @@ iframe {
     background-color: #556a66;
 }
 
-.comm-input {
+.comm-search {
     display: block;
     margin-left: 1rem;
     padding: .25rem .45rem;
     font-size: 1.25rem;
     line-height: 0;
     outline: 0;
+    background-color: rgba(0,0,0,0);
+    background-clip: padding-box;
+    border: 1px solid #000000;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.comm-input {
+    display: block;
+    padding: .25rem .45rem;
+    line-height: 0;
+    outline: 0;
+    background-color: rgba(0,0,0,0);
+    background-clip: padding-box;
+    border: 1px solid #000000;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.comm-btn {
+    display: block;
+    padding: .25rem .45rem;
+    line-height: 1;
     background-color: rgba(0,0,0,0);
     background-clip: padding-box;
     border: 1px solid #000000;
@@ -104,6 +128,10 @@ iframe {
     border-radius: .5rem!important;
 }
 
+.title-td{
+    text-align: right;
+}
+
 .dropdown-header{
     padding: 0rem .5rem!important;
     font-size: 1.2rem!important;
@@ -125,4 +153,8 @@ iframe {
 
 .txcent{
     text-align-all: center;
+}
+
+.err-tips {
+    color: darkred;
 }
