--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -158,3 +158,8 @@ iframe {
 .err-tips {
     color: darkred;
 }
+
+.fitfull{
+    padding-right: 0px!important;
+    padding-left: 0px!important;
+}
