--- a/src/main/resources/static/css/comm.css
+++ b/src/main/resources/static/css/comm.css
@@ -163,3 +163,27 @@ iframe {
     padding-right: 0px!important;
     padding-left: 0px!important;
 }
+
+.treeulcoll{
+    list-style-image:url(/img/icons/caret-right-fill.svg);
+    list-style-type:square;
+    padding-inline-start: 20px!important;
+    margin-bottom: 0rem!important;
+}
+
+.treeulex{
+    list-style-image:url(/img/icons/caret-down.svg);
+    list-style-type:square;
+    padding-inline-start: 20px!important;
+    margin-bottom: 0rem!important;
+}
+
+.treeli{
+    padding: 1px 1rem 0 .25rem;
+}
+
+.treeli:hover, .treeli:focus {
+    background-color: #594f73!important;
+    border-radius: .5rem;
+}
+
